# luminovel

./: README.md
backend/: .coverage  .env  .env.example  pyproject.toml  pyrightconfig.json  pytest.ini
backend/app/: main.py
backend/app/api/v1/: routes_auth.py  routes_author.py  routes_novel.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: association.py  chapter.py  genre.py  novel.py  tag.py  user.py
backend/app/schemas/: author.py  chapter.py  genre.py  novel.py  tag.py  user.py
backend/app/services/: author_service.py  novel_service.py  user_service.py
backend/app/tests/: conftest.py  test_auth.py  test_author.py  test_novel.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: a604d3a37f1a_initial.py
backend/models/: author.py
frontend/: .gitignore  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/browse/: page.tsx
frontend/src/app/rankings/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: NovelCard.tsx  ThemeToggle.tsx  login-form.tsx  signup-form.tsx
frontend/src/components/Browse/: BrowseClient.tsx  BrowseFilter.tsx  BrowseHeader.tsx  BrowseResult.tsx
frontend/src/components/Home/: CompletedSection.tsx  HeroSection.tsx  NewArrivalSection.tsx  RankingSection.tsx  TopGenreTags.tsx  TrendingSection.tsx  WeeklySection.tsx
frontend/src/components/Layout/: Footer.tsx  NavBar.tsx
frontend/src/components/ui/: button.tsx
frontend/src/lib/: novels.ts  ranking.ts
frontend/src/types/: novel_type.ts
(+6 files in other folders)
