[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.1",
    "argon2-cffi>=25.1.0",
    "cryptography>=46.0.3",
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.4",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "python-jose>=3.5.0",
    "python-slugify>=8.0.4",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
